# Asclepius

./: .gitignore  Asclepius.tex  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-04T16-33-50-032Z.yml  page-2026-05-04T16-34-03-073Z.yml  page-2026-05-04T16-43-09-650Z.yml  page-2026-05-04T16-44-57-895Z.yml  page-2026-05-04T16-47-12-456Z.yml  page-2026-05-04T16-47-36-390Z.yml  page-2026-05-04T16-47-36-843Z.yml  page-2026-05-04T16-47-55-596Z.yml  page-2026-05-04T16-48-20-927Z.yml  page-2026-05-04T16-49-39-699Z.yml  page-2026-05-04T16-50-08-283Z.yml
apps/cli/: CMakeLists.txt  main.cpp
apps/svc/: CMakeLists.txt
bindings/python/: CMakeLists.txt  asclepius_py.cpp
bindings/python/asclepius/: __init__.py  bench.py  policies.py
bindings/python/tests/: test_bench_parser.py
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake
docs/: ARCHITECTURE.md  BACKENDS.md  SPEC.md  THREAT_MODEL.md
examples/01_wrap_scribe/: CMakeLists.txt  main.cpp
examples/02_drift_demo/: CMakeLists.txt  main.cpp
examples/03_evidence_bundle/: CMakeLists.txt  main.cpp
examples/04_bench/: CMakeLists.txt  main.cpp
examples/05_wrap_ms_asclepius/: CMakeLists.txt  README.md  main.cpp
examples/06_wrap_starmpcc/: CMakeLists.txt  README.md  main.cpp
examples/07_india_profile/: CMakeLists.txt  README.md  main.cpp
examples/08_india_full_journey/: CMakeLists.txt  README.md  main.cpp
include/asclepius/: asclepius.hpp  audit.hpp  canonical.hpp  consent.hpp  core.hpp  evaluation.hpp  hashing.hpp  identity.hpp  policy.hpp  runtime.hpp  telemetry.hpp  version.hpp
include/asclepius/interop/: fhir.hpp
proto/: README.md  asclepius.proto
proto/asclepius/v1/: common.proto  evidence.proto  ledger.proto  sidecar.proto
site/: .editorconfig  .gitignore  404.html  Makefile  README.md  _headers  _redirects  accessibility.html  api.html  architecture.html  asset-manifest.json  atom.xml  badges.html  benchmarks.html  build_api.py  build_docs.py  build_search.py  changelog.html  cheatsheet.html  check_content.py  check_html.py  check_integrity.py  check_orphans.py  colophon.html  compare.html  concepts.html  conformance.html  contributing.html  cookies.html  crypto.html  decisions.html  demo.css  demo.html  deploy.html  docs.html  economics.html  explained.html  explorer.html  feed.json  feed.xml  (+44 more)
site/.well-known/: dnt-policy.txt  security.txt
site/assets/: bench.json  pgp.asc
site/js/: attest-site.js  badges.js  bench.js  demo.js  extras.js  floating.js  help.js  main.js  palette.js  source.js  themes.js
site/schemas/: audit-entry.v1.json
site/tests/: run.mjs
src/audit/: canonical.cpp  event_codes.cpp  human_attestation.cpp  india_helpers.cpp  jsonl.cpp  keystore.cpp  ledger.cpp  migrator.cpp  postgres_backend.cpp  sqlite_backend.cpp  storage.hpp  storage_factory.cpp
src/consent/: artefact.cpp  emergency_override.cpp  family_graph.cpp  registry.cpp
src/core/: error.cpp  hashing.cpp  identity.cpp  time.cpp
src/evaluation/: bundle.cpp  harness.cpp  india_bundles.cpp  sample_and_care.cpp
src/interop/: fhir.cpp
src/policy/: access_constraint.cpp  clinical_action_filter.cpp  phi_scrubber.cpp  policy_chain.cpp  schema_validator.cpp
src/runtime/: inference.cpp  runtime.cpp
src/telemetry/: calibration.cpp  cohort.cpp  drift.cpp  metrics.cpp
tests/: CMakeLists.txt  test_access_constraint.cpp  test_audit.cpp  test_audit_india_helpers.cpp  test_calibration_monitor.cpp  test_cohort_ledger.cpp  test_consent.cpp  test_consent_artefact.cpp  test_core.cpp  test_emergency_override.cpp  test_evaluation.cpp  test_family_graph.cpp  test_fhir.cpp  test_hashing.cpp  test_human_attestation.cpp  test_identity.cpp  test_india_bundles.cpp  test_json_hardening.cpp  test_main.cpp  test_policy.cpp  test_postgres_backend.cpp  test_runtime.cpp  test_sample_and_care.cpp  test_telemetry.cpp
tests/benchmarks/asclepius_med/: CMakeLists.txt  README.md  adapter.cpp  adapter.hpp  fixture.json  test_adapter.cpp
